namespace-buildkit.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: buildkit
  labels:
    kubernetes.io/metadata.name: buildkit
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
