pod-watcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: launchs-org-watcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: launchs-org-watcher
  template:
    metadata:
      labels:
        app: launchs-org-watcher
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: launchs-org-watcher
      serviceAccountName: launchs-org-watcher
      containers:
        - name: launchs-org-watcher
          image: ghcr.io/launchs-org/watcher:0.1.5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
