authbase.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: launchs-org-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: launchs-org-auth
  template:
    metadata:
      labels:
        app: launchs-org-auth
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: launchs-org-auth
      containers:
        - name: launchs-org-auth
          image: ghcr.io/mattuu0/authbase/auth:v0.1.4
          ports:
            - containerPort: 8080
            - containerPort: 9000
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          volumeMounts:
            - name: assets-vol
              mountPath: /assets/icons
      volumes:
        - name: assets-vol
          persistentVolumeClaim:
            claimName: launchs-org-claim

---
apiVersion: v1
kind: Service
metadata:
  name: launchs-org-auth-svc
spec:
  type: LoadBalancer
  selector:
    app: launchs-org-auth
  ports:
    - name: api-port
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: grpc-port
      protocol: TCP
      port: 9000
      targetPort: 9000
