pod-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: launchs-org-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: launchs-org-backend
  template:
    metadata:
      labels:
        app: launchs-org-backend
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: launchs-org-backend
      containers:
        - name: launchs-org-backend
          image: ghcr.io/launchs-org/backend:0.1
          ports:
            - containerPort: 8090
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: launchs-org-backend-svc
spec:
  type: LoadBalancer
  selector:
    app: launchs-org-backend
  ports:
    - port: 8080
      targetPort: 8080
