static.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: launchs-org-static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: launchs-org-static
  template:
    metadata:
      labels:
        app: launchs-org-static
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: launchs-org-static
      containers:
        - name: launchs-org-static
          image: ghcr.io/launchs-org/frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: launchs-org-static-svc
spec:
  type: LoadBalancer
  selector:
    app: launchs-org-static
  ports:
    - port: 80
      targetPort: 3000
