network-policy-harbor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-launchs-org
  namespace: main-harbor
spec:
  podSelector: {} # {} にすることで「このNamespace内の全Pod」を対象にする
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: # ここが重要！
          matchLabels:
            kubernetes.io/metadata.name: launchs-org
  egress:
    - {} # 全ての宛先への通信を許可（許可設定が空のため）
